@@ -40,6 +40,8 @@ v0.61.2		11-Jul-2004
 		Currently tested: duplicate names - works.
 				  keep #          -
 				  replace	  -
+		Removed debug logging from toberep function since all problems
+		seems solved.
 
 	mbout:
 		Changed to use direct instead of immediate mail.
